samples/_failures_safe/1761660745_3dce01_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_adc62f69.c: In function ‘main’:
./samples/SAFE/__tmp_adc62f69.c:150:11: error: expected ‘;’ at end of input
  150 |     printf
      |           ^
      |           ;
./samples/SAFE/__tmp_adc62f69.c:150:5: error: expected declaration or statement at end of input
  150 |     printf
      |     ^~~~~~
